# cc-session-search

./: CLAUDE.md  DASHBOARD_FEATURES.md  FILTERING_GUIDE.md  PARSING_VERIFICATION.md  README.md  pyproject.toml  tmp.json  verify_parsing.py  verify_schema.py
cc_session_search/: __init__.py  cli.py  comparison_view.py  conversation_view.py  dashboard.py  dashboard_utils.py  graph_visualizer.py  server.py  session_selector.py
cc_session_search/core/: conversation_parser.py  searcher.py  summarizer.py
