[project]
name = "cc-session-search"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.2.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.1.0",
    "tokencost>=0.1.0",
]

[project.scripts]
ccsearch = "cc_session_search.cli:main"

[tool.uv]
package = true
